--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,7 +20,7 @@
         <br>
         <textarea class="form-control" placeholder="Type your message here, amigo! "rows="8" cols="80" ng-model="post"></textarea>
         <br />
-        <button class="form-control btn-primary" ng-click="messages.addPost(name, post)" type="button" name="button">Submit</button>
+        <button class="form-control btn-primary submit" ng-click="messages.addPost(name, post)" type="button" name="button">Submit</button>
         </form>
         <br />
         <label>Search: <input class="form-control col-md-3" ng-model="searchPosts" /></label>
@@ -35,10 +35,10 @@
       <div class="col-md-12" ng-repeat="thing in messages.messagesArray | filter:searchPosts">
         <!-- e.g. var person = welcome.people[i]; -->
         <div class="col-md-4">
-
         <p>{{ thing.name }}</p>
         <p>{{ thing.post }}</p>
         <button class="btn-danger" ng-click="messages.deletePost($index)">Delete Post</button>
+        <br>
         </div>
       </div>
     </div>
